[gd_scene load_steps=45 format=3 uid="uid://ciiq0auj6fod4"]

[ext_resource type="Script" uid="uid://crhjmlefdvjyl" path="res://scenes/player/player.gd" id="1_p47bc"]
[ext_resource type="Texture2D" uid="uid://dnqx2qlufx3ip" path="res://assets/sprites/player/player_sheet.png" id="6_5gtgg"]
[ext_resource type="Script" uid="uid://ben2n4n2jumso" path="res://scenes/player/camera_2d.gd" id="7_0owmy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("6_5gtgg")
region = Rect2(1120, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvxji"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("6_5gtgg")
region = Rect2(800, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("6_5gtgg")
region = Rect2(800, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("6_5gtgg")
region = Rect2(960, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("6_5gtgg")
region = Rect2(1120, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("6_5gtgg")
region = Rect2(480, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("6_5gtgg")
region = Rect2(480, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("6_5gtgg")
region = Rect2(800, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wva7c"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7obkq"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo27k"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_genst"]
atlas = ExtResource("6_5gtgg")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_niom3"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttakn"]
atlas = ExtResource("6_5gtgg")
region = Rect2(800, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8a5"]
atlas = ExtResource("6_5gtgg")
region = Rect2(960, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuka"]
atlas = ExtResource("6_5gtgg")
region = Rect2(1120, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("6_5gtgg")
region = Rect2(960, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("6_5gtgg")
region = Rect2(1120, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("6_5gtgg")
region = Rect2(480, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("6_5gtgg")
region = Rect2(1120, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("6_5gtgg")
region = Rect2(480, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("6_5gtgg")
region = Rect2(640, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("6_5gtgg")
region = Rect2(800, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("6_5gtgg")
region = Rect2(960, 320, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_5gtgg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}],
"loop": true,
"name": &"crouched",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}],
"loop": false,
"name": &"crouched-attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wva7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7obkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo27k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_genst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niom3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttakn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuka")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}],
"loop": false,
"name": &"jump-attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p47bc"]
size = Vector2(27, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0owmy"]
size = Vector2(46, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gtgg"]
size = Vector2(30, 68)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_p47bc")
move_speed = 160.0
jump_speed = 435.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5gtgg")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_p47bc")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("7_0owmy")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(44, -15)
shape = SubResource("RectangleShape2D_0owmy")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_5gtgg")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
